No longer need #sign-up margin-top spacing.

--- a/singlepurposesite/css/style.css
+++ b/singlepurposesite/css/style.css
@@ -72,6 +72,16 @@ footer {
     width: 960px;
 }
 
+li {
+    list-style-type: none;
+}
+
+img {
+    height: 100%;
+    width: 100%;
+}
+
+
 
 .form-group {
     margin-left: 27.5px;
@@ -95,16 +105,6 @@ footer {
     border: none;
     width: 120px;
 }
-
-li {
-    list-style-type: none;
-}
-
-img {
-    height: 100%;
-    width: 100%;
-}
-
 
 .inset {
     margin: 0 72px;
@@ -172,8 +172,4 @@ img {
 
 #welcome {
     padding: 20px 72px;
-}
-
-#sign-up-form {
-    margin-top: 75px;
 }
